# vortex_valve_esp

./: README_WIFI_SCENARIOS.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  global_var.c  global_var.h  main_process.c  main_process.h  softap_sta.c  test_process.c  test_process.h  time_func.c  time_func.h
main/eeprom_fn/: SCHEDULE_STORAGE_DOC.md  WIFI_STORAGE_DOC.md  schedule_storage.c  schedule_storage.h  shedule_storage.c  shedule_storage.h  wifi_storage.c  wifi_storage.h
main/mqtt_fn/: MQTT_ADVANCED_DOC.md  MQTT_MSG_FLOW.md  README.md  ca_cert.pem  mqtt_client_fn.c  mqtt_state_fn.c  mqtt_state_fn.h
main/valve_fn/: led_indicators.c  limit_switch.c  valve_motor.c  valve_process.c  valve_process.h
main/websocket_fn/: README.md  WEBSOCKET_ADVANCED_DOC.md  WEBSOCKET_MSG_FLOW.md  readme.md  websocket_server_fn.c  websocket_state_fn.c
