idf_component_register(SRCS 
                            "softap_sta.c"
                            "global_var.c"
                            "eeprom_fn/wifi_storage.c"
                            "eeprom_fn/shedule_storage.c"
                            "websocket_fn/websocket_server_fn.c"
                            "websocket_fn/websocket_state_fn.c"
                            "time_func.c"
                            "mqtt_fn/mqtt_client_fn.c"
                            "mqtt_fn/mqtt_state_fn.c"
                            "valve_fn/led_indicators.c"
                            "valve_fn/valve_motor.c"
                            "valve_fn/limit_switch.c"
                            "valve_fn/valve_process.c"
                            "main_process.c"
                        INCLUDE_DIRS 
                            "."
                        EMBED_TXTFILES
                            "mqtt_fn/ca_cert.pem"
                        REQUIRES 
                            esp_wifi 
                            mqtt 
                            nvs_flash 
                            json 
                            esp_http_server 
                            esp_event
                            driver
                            )
